kubernetes/ingress-stg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: _APP_NAME
  namespace: _NAMESPACE
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: backend
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:577638381877:certificate/531ac222-b136-4e79-b251-12b5a49540c4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-2:577638381877:regional/webacl/aliagents-stg/d0b140e2-011d-4416-ba2b-f00bf49a524b
    alb.ingress.kubernetes.io/wafv2-acl-scope: regional
  labels:
    app: _APP_NAME
spec:
  ingressClassName: alb
  rules:
    - host: _NAMESPACE-_APP_NAME.aliagents.ai
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: _APP_NAME
              port:
                number: 80
